<resources>
    <string name="app_name">Project</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="main_fragment_text">Select a Program and Semester from the navigation drawer.</string>
    <string name="refresh_database">Refresh Database</string>
    <string name="id">ID:</string>
    <string name="program">Program:</string>
    <string name="semester">Semester:</string>
    <string name="course_code">Course Code:</string>
    <string name="title">Title:</string>
    <string name="description">Description:</string>
    <string name="owner">Owner:</string>
    <string name="optional">Optional:</string>
    <string name="hours">Hours:</string>
</resources>
