<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="ca.mohawkcollege.da_silva_moraes.project.CourseDescription">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/id_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/id"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/id_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp" />

            <TextView
                android:layout_marginTop="10dp"
                android:id="@+id/program_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/program"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/program_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp" />

            <TextView
                android:layout_marginTop="10dp"
                android:id="@+id/semester_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/semester"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/semester_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp" />

            <TextView
                android:layout_marginTop="10dp"
                android:id="@+id/code_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/course_code"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/code_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp" />

            <TextView
                android:layout_marginTop="10dp"
                android:id="@+id/title_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/title_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp" />

            <TextView
                android:layout_marginTop="10dp"
                android:id="@+id/description_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/description_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp" />

            <TextView
                android:layout_marginTop="10dp"
                android:id="@+id/owner_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/owner"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/owner_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp" />

            <TextView
                android:layout_marginTop="10dp"
                android:id="@+id/optional_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/optional"
                android:textStyle="bold"/>

            <TextView

                android:id="@+id/optional_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp" />

            <TextView
                android:layout_marginTop="10dp"
                android:id="@+id/hours_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hours"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/hours_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp" />

        </LinearLayout>

    </ScrollView>
